--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,16 +4,16 @@
 
 @layer base {
     :root {
-        --sors-primary: 52 152 219;
-        --sors-success: 39 174 96;
-        --sors-danger: 231 76 60;
-        --sors-neutral: 149 165 166;
-        --sors-ink: 17 24 39;
-        --sors-surface: 245 247 251;
+        --kitamo-primary: 52 152 219;
+        --kitamo-success: 39 174 96;
+        --kitamo-danger: 231 76 60;
+        --kitamo-neutral: 149 165 166;
+        --kitamo-ink: 17 24 39;
+        --kitamo-surface: 245 247 251;
     }
 
     body {
-        background-color: rgb(var(--sors-surface));
-        color: rgb(var(--sors-ink));
+        background-color: rgb(var(--kitamo-surface));
+        color: rgb(var(--kitamo-ink));
     }
 }
