--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -60,27 +60,15 @@
 
     input:focus,
     select:focus,
-    textarea:focus,
-    input:focus-visible,
-    select:focus-visible,
-    textarea:focus-visible {
+    textarea:focus {
         outline: none;
         box-shadow: none;
     }
 
-    /* Chrome/Safari focus ring */
     :where(input, textarea, select, button, a):focus-visible {
-        outline: none !important;
-        box-shadow: none !important;
-    }
-
-    /* Defensive: remove any remaining focus outlines */
-    :where(*):focus {
-        outline: none;
-    }
-    :where(*):focus-visible {
-        outline: none !important;
-        box-shadow: none !important;
+        outline: 2px solid rgb(var(--kitamo-brand));
+        outline-offset: 2px;
+        box-shadow: none;
     }
 
     /* Remove iOS/Chrome default appearance that can draw inner borders */
